--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
-alembic==1.10.2
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
-click @ file:///C:/ci/click_1646056762388/work
-colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
-Flask @ file:///C:/b/abs_ef16l83sif/croot/flask_1671217367534/work
-Flask-Migrate==4.0.4
-Flask-SQLAlchemy==3.0.3
-Flask-WTF==1.1.1
-greenlet==2.0.2
-gunicorn==20.1.0
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
-Mako==1.2.4
-MarkupSafe @ file:///C:/ci/markupsafe_1654508036328/work
-SQLAlchemy==2.0.5.post1
-typing_extensions==4.5.0
-Werkzeug @ file:///C:/b/abs_17q5kgb8bo/croot/werkzeug_1671216014857/work
+alembic==0.9.9
+blinker==1.4
+chardet==3.0.4
+click==6.7
+Flask==1.0.2
+Flask-Dance==0.14.0
+Flask-DebugToolbar==0.10.1
+Flask-Login==0.4.1
+Flask-Migrate==2.1.1
+Flask-OAuth==0.12
+Flask-OAuthlib==0.9.4
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+httplib2==0.11.3
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+lazy==1.3
+Mako==1.0.7
+MarkupSafe==1.1.1
+oauth2==1.9.0.post1
+oauthlib==2.0.7
+python-dateutil==2.7.2
+python-editor==1.0.3
+requests==2.18.4
+requests-oauthlib==0.8.0
+six==1.11.0
+SQLAlchemy==1.2.6
+SQLAlchemy-Utils==0.33.2
+urllib3==1.22
+URLObject==2.4.3
+Werkzeug==0.14.1
 wincertstore==0.2
-WTForms==3.0.1
+WTForms==2.1
